<resources>
    <string name="app_name">Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="humidity_detail">
        Humidity\n
        %d %%
    </string>
    <string name="humidity_label">Humidity</string>
    <string name="humidity">%d %%</string>
    <string name="wind_detail">
        Wind\n
        %.1f m/s
    </string>
    <string name="wind_label">Wind</string>
    <string name="wind">%.1f m/s</string>
    <string name="clouds_detail">
        Clouds\n
        %d %%
    </string>
    <string name="clouds_label">Clouds</string>
    <string name="clouds">%d %%</string>
    <string name="temp">\u0020%d°</string>
    <string name="search_weather">%s %d°</string>
    <string name="weather_icon">weather icon</string>
    <string name="off_gps_message">We cannot get your location. You may need to enable GPS on your phone</string>
    <string name="search_hint">Enter your city name</string>
    <string name="delete">Delete</string>
    <string name="auto_locate">Auto-Locate</string>
    <string name="back">back</string>
</resources>
