<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background_night"
    android:orientation="vertical"
    tools:context=".screens.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_back"
            android:padding="12dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/actionBarItemBackground"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/search" />

        <EditText
            android:id="@+id/search_edit_text"
            android:hint="@string/search_hint"
            android:textColorHint="#FFF"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

        <ImageView
            android:id="@+id/search_search"
            android:padding="12dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/actionBarItemBackground"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search" />

    </LinearLayout>

    <Switch
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:id="@+id/search_auto_locate"
        android:text="@string/auto_locate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>